--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="//unpkg.com/globe.gl"></script>
 	<!--<script src="../../dist/globe.gl.js"></script>-->
       </head>
-      <title>JBang Version Check Globe</title>
+      <title>JBang Globe</title>
       <style>
 	body { text-align: center; background-color: black; }
 	h1 { font-size: 50px; }
@@ -32,7 +32,7 @@
       
       <body>
 
-	<h1>JBang version check Globe</h1>
+	<h1>JBang Globe</h1>
 	<p>Below is a visualization of recent <a href="https://www.jbang.dev/documentation/guide/latest/installation.html#version-check">version checks</a> done by JBang users world wide. </p>
 	<div id="menu">
 		<span id="autorotate" class="menu-item">Stop Spin</span>
